# LogSystem

./: CMakeLists.txt  README
include/: LogQueue.h  Logger.h
src/: LogQueue.cpp  Logger.cpp  main.cpp
